<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_power_usage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.thomson.hci.Activities.PowerUsageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:textSize="15dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/smart_app_name"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_weight="50"
            android:text="@string/power_consumption"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:textAlignment="center"
            android:text="@string/light_controller"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:textAlignment="center"
            android:id="@+id/view_pc_app1"
            />


    </LinearLayout>




</LinearLayout>
